@@ -1,3 +1,10 @@
+2008-05-04  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
+	* src/av-cp/playlist-treeview.c:
+
+	Add iterative browsing support: request 64 objects of a container, at
+	a time and keep browsing till we get all objects.
+
 2008-04-17  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
 	* src/common/icons.c:
